# edgarquery

./: README.md  notes.txt  pyproject.toml
scripts/: mycompanyconcepttocsv.py  mycompanyfactstocsv.py  mycompanyfactsziptocsv.py  mydoquery.py  mylatest10K.py  mylatestsubmissions.py  mysubmissions.py  mysubmissionsziptocsv.py  mytickerstocsv.py  myxbrlframestocsv.py
src/edgarquery/: __about__.py  __init__.py  cikperson.py  common.py  companyconcepttocsv.py  companyfactsshow.py  companyfactstocsv.py  companyfactsziptocsv.py  concepts.sh  doquery.py  edgarcompanyconcepttocsv.py  edgarcompanyfactsshow.py  edgarcompanyfactstocsv.py  edgarcompanyfactsziptocsv.py  edgarlatest10K.py  edgarlatestsubmission.py  edgarlatestsubmissions.py  edgarquery.py  edgarsubmissions.py  edgarsubmissionsziptocsv.py  edgartickerstocsv.py  edgarxbrlframestocsv.py  insidertrading.py  latest10K.py  latestsubmissions.py  pyproject.toml  submissions.py  submissionsziptocsv.py  tickerstocsv.py  xbrlframestocsv.py
src/edgarquery/clis/: mycompanyconcepttocsv.py  mycompanyfactstocsv.py  mycompanyfactsziptocsv.py  mydoquery.py  mylatest10K.py  mylatestsubmissions.py  mysubmissions.py  mysubmissionsziptocsv.py  mytickerstocsv.py  myxbrlframestocsv.py
src/edgarquery/submissions/: edgarlatestsubmissions.py  edgarsubmissions.py
tests/: x.sh
