
# https://drivendata.co/blog/python-packaging-2023
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
requires = ["setuptools"]

[project]
name = "edgarquery"
version = "0.0.1"
description = "A package to query SEC EDGAR via its API"
authors = [
    { name = "Don Caldwell", email = "dfwcnj@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "requests>2",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

